--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0"
   },
