--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router": "^5.1.20",
     "flowbite-react": "^0.6.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
