--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-accessible-accordion": "^5.0.0",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
